[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "photopie"
version = "0.1.0"
description = "PhotoPie is the missing Python API for Adobe Photoshop(R)"
authors = ["Ioannis Valasakis <code@wizofe.uk>"]

license = "MPL-2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"


[tool.poetry.dev-dependencies]
pytest = "^4.5"
pytest-cov = "^2.7"
tox = "^3.11"
pre-commit = "^1.16"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

# dephell venv create --env=pytest
# dephell deps install --env=pytest
# dephell venv run --env=pytest
[tool.dephell.pytest]
from = {format = "poetry", path = "pyproject.toml"}
envs = ["main", "dev"]
python = "3.5"
command = "pytest tests/"

# dephell venv run --env=black
[tool.dephell.black]
prereleases = true
command = "black photopie/ tests/"

# dephell venv run --env=flake8
[tool.dephell.flake8]
command = "flake8"

# dephell venv run --env=bandit
[tool.dephell.bandit]
command = "bandit photopie/"
